[94] Gap between elements fix

--- a/src/Auctionify.API/ClientApp/src/app/components/buyer/auction/auction.component.scss
+++ b/src/Auctionify.API/ClientApp/src/app/components/buyer/auction/auction.component.scss
@@ -87,6 +87,7 @@
         display: flex;
         width: 100%;
         justify-content: flex-start;
+        padding-top: 30px;
         padding-bottom: 30px;
     }
 
@@ -102,6 +103,7 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+        padding-top: 30px;
         padding-bottom: 30px;
     }
 }
